<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentPerfil"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="42dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="251dp"
                    android:layout_height="52dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/raleway_black_italic"
                    android:gravity="center"
                    android:text="@string/configuracion"
                    android:textAlignment="center"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="22sp"
                    tools:ignore="MissingConstraints" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="103dp">

                <ImageView
                    android:id="@+id/ImgPerfil"
                    android:layout_width="199dp"
                    android:layout_height="145dp"
                    android:layout_alignParentTop="true"

                    android:layout_centerHorizontal="true"
                    android:foregroundGravity="center"
                    android:src="@drawable/perfil" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnCambiarI"
                    android:layout_width="149dp"
                    android:layout_height="31dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorAzuloscuro"
                    android:fontFamily="@font/raleway_medium"
                    android:gravity="center"
                    android:text="@string/cambiarImagen"
                    android:textColor="@color/colorgris" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/raleway_black_italic"
                    android:gravity="center"
                    android:text="@string/datos"
                    android:textAlignment="center"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="20sp"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="45dp"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/nombres"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txtNombrePerfil"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="38dp"
                    android:fontFamily="@font/raleway_light"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/apellidos"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txtApellidosPerfil"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="70dp"
                    android:fontFamily="@font/raleway_light"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="411dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/Telefono"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/txttelefonoPerfil"
                    android:layout_width="202dp"
                    android:layout_height="32dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="78dp"
                    android:ems="10"
                    android:inputType="number" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/Documento"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txtdocumentoPerfil"
                    android:layout_width="188dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.075"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/txttelefonoPerfil"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/Email"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/txtCorreoPerfil"
                    android:layout_width="247dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/raleway_light"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    tools:ignore="MissingConstraints" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/raleway_light"
                    android:text="@string/contraseña"
                    android:textColor="@color/colorAzuloscuro"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <EditText
                    android:id="@+id/txtpasswordPerfil"
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    app:layout_constraintVertical_bias="1.0" />


            </RelativeLayout>


            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorAzuloscuro"
                android:text="@string/hecho"
                android:textColor="#fff"
                tools:ignore="MissingConstraints" />


        </LinearLayout>
    </ScrollView>

    <!-- TODO: Update blank fragment layout -->

</android.support.constraint.ConstraintLayout>